--- a/MyApplication/app/src/main/res/layout/content_main_activity_draw.xml
+++ b/MyApplication/app/src/main/res/layout/content_main_activity_draw.xml
@@ -12,5 +12,43 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.sansigolo.myapplication.MainActivityDraw"
     tools:showIn="@layout/app_bar_main_activity_draw">
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Selecione o local que você deseja acessar:"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textSize="16sp"
+        android:textStyle="normal|bold" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:id="@+id/spinner" />
+
+    <Button
+        android:text="Abrir no Mapa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_maps"
+        android:layout_below="@+id/spinner"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp"
+        android:layout_alignParentEnd="true"
+        android:onClick="changeActivity"/>
+
+    <Button
+        android:text="Onde eu Estou"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="26dp"
+        android:id="@+id/btn_gps1"
+        android:onClick="changeActivity2"/>
 
 </RelativeLayout>
