--- a/MyApplication/app/src/main/res/layout/activity_main_draw.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main_draw.xml
@@ -20,6 +20,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main_activity_draw"
-        app:menu="@menu/activity_main_draw_drawer" />
+        app:menu="@menu/activity_main_draw_drawer" >
+
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
