--- a/MyApplication/app/src/main/res/layout/app_bar_main_activity_draw.xml
+++ b/MyApplication/app/src/main/res/layout/app_bar_main_activity_draw.xml
@@ -25,10 +25,11 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="61dp"
+        android:layout_height="58dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:onClick="changeActivity2"
+        app:srcCompat="@android:drawable/ic_dialog_map" />
 
 </android.support.design.widget.CoordinatorLayout>
