--- a/MyApplication/app/src/main/res/layout/content_main_activity_draw.xml
+++ b/MyApplication/app/src/main/res/layout/content_main_activity_draw.xml
@@ -31,24 +31,14 @@
         android:id="@+id/spinner" />
 
     <Button
-        android:text="Abrir no Mapa"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_maps"
-        android:layout_below="@+id/spinner"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp"
         android:layout_alignParentEnd="true"
-        android:onClick="changeActivity"/>
-
-    <Button
-        android:text="Onde eu Estou"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="26dp"
-        android:id="@+id/btn_gps1"
-        android:onClick="changeActivity2"/>
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="16dp"
+        android:onClick="changeActivity"
+        android:text="Abrir no Mapa" />
 
 </RelativeLayout>
