--- a/MyApplication/app/src/main/res/layout/content_main_activity_draw.xml
+++ b/MyApplication/app/src/main/res/layout/content_main_activity_draw.xml
@@ -13,6 +13,17 @@
     tools:context="com.example.sansigolo.myapplication.MainActivityDraw"
     tools:showIn="@layout/app_bar_main_activity_draw">
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="16dp"
+        android:onClick="changeActivity"
+        android:text="Abrir no Mapa" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,14 +42,14 @@
         android:id="@+id/spinner" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_marginTop="13dp"
+        android:onClick="OpenUrl"
+        android:text="Sobre o ponto"
+        android:layout_below="@+id/button5"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/spinner"
-        android:layout_marginTop="16dp"
-        android:onClick="changeActivity"
-        android:text="Abrir no Mapa" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
