--- a/MyApplication/app/src/main/res/layout/nav_header_main_activity_draw.xml
+++ b/MyApplication/app/src/main/res/layout/nav_header_main_activity_draw.xml
@@ -13,6 +13,14 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:weightSum="1">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.40"
+        android:adjustViewBounds="false"
+        app:srcCompat="?android:attr/textSelectHandle" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +29,7 @@
         android:text="7 Wonders App"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <TextView
